fix(frontend): slight style improvement regarding spacing + fix typescript build failed issue

--- a/frontend/src/components/navbar/navbar.module.scss
+++ b/frontend/src/components/navbar/navbar.module.scss
@@ -48,6 +48,7 @@ $bottomSpace: 32px;
   display: flex;
   flex-grow: 1;
   justify-content: start;
+  gap: 6px;
 }
 
 .desktopNav,
