--- a/frontend/src/components/quiz/managed-quizzes-list/managed-quizzes-list.module.scss
+++ b/frontend/src/components/quiz/managed-quizzes-list/managed-quizzes-list.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 10px 16px;
   align-items: center;
 }
 
